# confusion_ros

./: .gitmodules  CMakeLists.txt  package.xml
include/confusion_ros/: AprilTagModuleRos.h  ExternalReferenceTrackingModuleRos.h  TagTrackerRos.h  apriltag_module_ros.h  apriltag_ros_utils.h  ert_ros_utilities.h  external_reference_tracking_module_ros.h  ros_conversions.h  tag_tracker_ros.h
include/confusion_ros/impl/: tag_tracker_ros.h
src/: AprilTagModuleRos.cpp  ExternalReferenceTrackingModuleRos.cpp  apriltag_module_ros.cpp  external_reference_tracking_module_ros.cpp  ros_conversions.cpp  tag_tracker_node.cpp  visualize_pose.cpp
test/: tag_tracker_test.cpp
test/include_test/: io_utils.h
